# base64

./: CMakeLists.txt  LICENSE  benchmark.md  demo.c  readme.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  bench.c  binary.c  demo.c  hex.c
scripts/: format.sh
src/: base64.c  base64.h
